--- a/index.html
+++ b/index.html
@@ -3,8 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>Minha Landing Page</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header
+      id="home"
+      class="bg-primary text-white text-center d-flex flex-column justify-content-center align-items-center vh-100"
+    >
+      <h1>Nome do Projeto</h1>
+      <p class="lead">Slogan ou descrição breve</p>
+      <div>
+        <button class="btn btn-light mt-3 mx-2" id="cta-button-saiba-mais">
+          Saiba Mais
+        </button>
+        <button class="btn btn-light mt-3 mx-2" id="cta-button-contato">
+          Contato
+        </button>
+      </div>
+    </header>
+    <section
+      id="produtos-servicos"
+      class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-light"
+    >
+      <h2 class="text-center">Produtos e Serviços</h2>
+      <p class="text-center">
+        Descrição dos produtos e/ou serviços oferecidos.
+      </p>
+    </section>
+    <section
+      id="sobre-contato"
+      class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-warning"
+    >
+      <h2 class="text-center">Sobre/Contato</h2>
+      <form id="contact-form" class="mx-auto" style="max-width: 500px">
+        <div class="form-group">
+          <label for="nome">Nome:</label>
+          <input
+            type="text"
+            class="form-control"
+            id="nome"
+            name="nome"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="mensagem">Mensagem:</label>
+          <textarea
+            class="form-control"
+            id="mensagem"
+            name="mensagem"
+            required
+          ></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
