refactor: altera design para estilo tanjiro kamado

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
   <body>
     <header
       id="home"
-      class="bg-primary text-white text-center d-flex flex-column justify-content-center align-items-center vh-100"
+      class="xadrez text-white text-center d-flex flex-column justify-content-center align-items-center vh-100"
     >
       <h1>Nome do Projeto</h1>
       <p class="lead">Slogan ou descrição breve</p>
       <div>
-        <button class="btn btn-light mt-3 mx-2" id="cta-button-saiba-mais">
+        <button class="btn btn-success mt-3 mx-2" id="cta-button-saiba-mais">
           Saiba Mais
         </button>
-        <button class="btn btn-light mt-3 mx-2" id="cta-button-contato">
+        <button class="btn btn-danger mt-3 mx-2" id="cta-button-contato">
           Contato
         </button>
       </div>
     </header>
     <section
       id="produtos-servicos"
-      class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-light"
+      class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-success text-white"
     >
       <h2 class="text-center">Produtos e Serviços</h2>
       <p class="text-center">
@@ -37,7 +37,7 @@
     </section>
     <section
       id="sobre-contato"
-      class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-warning"
+      class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-danger text-white"
     >
       <h2 class="text-center">Sobre/Contato</h2>
       <form id="contact-form" class="mx-auto" style="max-width: 500px">
@@ -70,7 +70,7 @@
             required
           ></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button type="submit" class="btn btn-dark">Enviar</button>
       </form>
     </section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
