--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   <body>
     <header
       id="home"
-      class="xadrez text-white text-center d-flex flex-column justify-content-center align-items-center vh-100"
+      class="xadrez text-white text-center d-flex flex-column justify-content-center align-items-center vh-100 position-relative"
     >
+      <div class="position-fixed top-right p-3">
+        <button id="toggle-style" class="btn btn-sm btn-secondary">
+          Toggle Style
+        </button>
+      </div>
       <h1>Nome do Projeto</h1>
       <p class="lead">Slogan ou descrição breve</p>
       <div>
