refactor: atualização conteudo

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
       class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-success text-white"
     >
       <h2 class="text-center">Produtos e Serviços</h2>
-      <p class="text-center">
-        Descrição dos produtos e/ou serviços oferecidos.
+      <p class="text-center" style="margin: 0 20%">
+        Explore nossa coleção exclusiva de katanas japonesas, forjadas com
+        precisão e habilidade. Cada espada é uma obra-prima, combinando arte e
+        funcionalidade. Oferecemos personalização para atender às suas
+        necessidades específicas e garantir que você tenha uma katana única.
       </p>
     </section>
     <section
@@ -65,15 +68,6 @@
             name="email"
             required
           />
-        </div>
-        <div class="form-group">
-          <label for="mensagem">Mensagem:</label>
-          <textarea
-            class="form-control"
-            id="mensagem"
-            name="mensagem"
-            required
-          ></textarea>
         </div>
         <button type="submit" class="btn btn-dark">Enviar</button>
       </form>
