alteração de conteudo e fonte

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minha Landing Page</title>
+    <title>Katanas Japonesas - Minha Landing Page</title>
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,8 +20,8 @@
           Toggle Style
         </button>
       </div>
-      <h1>Nome do Projeto</h1>
-      <p class="lead">Slogan ou descrição breve</p>
+      <h1>Katanas Japonesas</h1>
+      <p class="lead">Descubra a arte e a precisão das katanas japonesas</p>
       <div>
         <button class="btn btn-success mt-3 mx-2" id="cta-button-saiba-mais">
           Saiba Mais
@@ -35,12 +35,13 @@
       id="produtos-servicos"
       class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-success text-white"
     >
-      <h2 class="text-center">Produtos e Serviços</h2>
-      <p class="text-center" style="margin: 0 20%">
-        Explore nossa coleção exclusiva de katanas japonesas, forjadas com
-        precisão e habilidade. Cada espada é uma obra-prima, combinando arte e
-        funcionalidade. Oferecemos personalização para atender às suas
-        necessidades específicas e garantir que você tenha uma katana única.
+      <h2 class="text-center">Katanas Japonesas</h2>
+      <p class="text-center">
+        Explore nossa coleção de katanas japonesas autênticas, cada uma
+        habilmente forjada para aperfeiçoar seu equilíbrio, precisão e beleza.
+        Cada lâmina conta uma história, refletindo séculos de tradição e
+        artesanato meticuloso. Adquira uma obra-prima que une arte e
+        funcionalidade, projetada para os apreciadores de arte e esgrima.
       </p>
     </section>
     <section
