--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
       <h1>Katanas Japonesas</h1>
       <p class="lead">Descubra a arte e a precisão das katanas japonesas</p>
       <div>
-        <button class="btn btn-success mt-3 mx-2" id="cta-button-saiba-mais">
+        <button
+          class="btn btn-custom-rubro mt-3 mx-2"
+          id="cta-button-saiba-mais"
+        >
           Saiba Mais
         </button>
-        <button class="btn btn-danger mt-3 mx-2" id="cta-button-contato">
+        <button class="btn btn-custom-ice mt-3 mx-2" id="cta-button-contato">
           Contato
         </button>
       </div>
