--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         >
           Saiba Mais
         </button>
-        <button class="btn btn-custom-ice mt-3 mx-2" id="cta-button-contato">
+        <button class="btn btn-custom-green mt-3 mx-2" id="cta-button-contato">
           Contato
         </button>
       </div>
