--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <p class="lead">Descubra a arte e a precisão das katanas japonesas</p>
       <div>
         <button
-          class="btn btn-custom-rubro mt-3 mx-2"
+          class="btn btn-custom-green mt-3 mx-2"
           id="cta-button-saiba-mais"
         >
           Saiba Mais
         </button>
-        <button class="btn btn-custom-green mt-3 mx-2" id="cta-button-contato">
+        <button class="btn btn-custom-rubro mt-3 mx-2" id="cta-button-contato">
           Contato
         </button>
       </div>
