ajustes texto e estilo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Katanas Japonesas - Minha Landing Page</title>
+    <title>Katanas Japonesas - Landing Page</title>
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
@@ -51,7 +51,7 @@
       id="sobre-contato"
       class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-danger text-white"
     >
-      <h2 class="text-center">Sobre/Contato</h2>
+      <h2 class="text-center">Contato</h2>
       <form id="contact-form" class="mx-auto" style="max-width: 500px">
         <div class="form-group">
           <label for="nome">Nome:</label>
