ajustes de texto e fonte em diferentes telas

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     >
       <h2 class="text-center">Katanas Japonesas</h2>
       <p class="text-center">
-        Explore nossa coleção de katanas japonesas autênticas, cada uma
+        Em breve explore nossa coleção de katanas japonesas autênticas! Cada uma
         habilmente forjada para aperfeiçoar seu equilíbrio, precisão e beleza.
         Cada lâmina conta uma história, refletindo séculos de tradição e
         artesanato meticuloso. Adquira uma obra-prima que une arte e
