--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
         <button type="submit" class="btn btn-dark">Enviar</button>
       </form>
     </section>
+    <section
+      id="lista-contatos"
+      class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100 bg-light text-dark"
+    >
+      <h2 class="text-center">Lista de Contatos</h2>
+      <div id="contacts-container" class="w-75"></div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
